--- a/Pokegame/main.css
+++ b/Pokegame/main.css
@@ -1,9 +1,37 @@
 body {
     font-family: 'Pokemon Solid', sans-serif;
     letter-spacing: 2px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
 #pokemonImage {
     width: 200px;
+    height: auto;
+}
+
+#Team {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 10px;
+}
+
+
+.pokemon {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    background-color: #f2f2f2;
+}
+
+.pokemon > img {
+    width: 100px;
     height: auto;
 }
