made remove reduce length of list

--- a/Pokegame/main.css
+++ b/Pokegame/main.css
@@ -31,6 +31,11 @@ body {
     background-color: #f2f2f2;
 }
 
+.pokemon > button {
+    grid-column: 1 / span 2;
+    background-color: rosybrown;
+}
+
 .pokemon > img {
     width: 100px;
     height: auto;
