--- a/main.css
+++ b/main.css
@@ -1,6 +1,13 @@
-body {
-    background-color: white;
+:root {
+    --bg1: white;
+    --bg2: rgb(40,40,40);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+body {
+    background-color: var(--bg1);
+    color: var(--bg2);
+    font-family: var(--font);
 }
 
 header {
@@ -8,7 +15,7 @@ header {
     padding: 10px 16px;
     background: rgb(29, 29, 29);
     color: #f1f1f1;
-    height: 110px;
+    height: 120px;
 }
 
 #socials > * {
@@ -104,8 +111,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
-    background-color: aliceblue;
+    border: 1px solid var(--bg2);
     transition: transform .2s;
     border-radius: 20px;
 }
@@ -116,7 +122,7 @@ main {
 
 .game-box > img {
     width: 50%;
-    object-fit: cover; /* or contain */
+    object-fit: cover; 
 }
 
 .game-box > a {
@@ -130,3 +136,61 @@ main {
     color: blue;
     text-decoration: none;
 }
+
+/* dark mode */
+
+.switch {
+    float: right;
+    position: relative;
+    width: 60px;
+    height: 34px;
+    
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(120, 200, 231);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: rgb(248, 248, 73);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #094677;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+    background-color: rgb(177, 175, 175)
+    
+}
+
+
+
+
