--- a/main.css
+++ b/main.css
@@ -50,26 +50,6 @@ body {
 }
 
 /* Main section */
-#spotify {
-    border-radius: 25px;
-    margin: 5%;
-    width: 700px;
-    height: auto;
-    transition: transform .2s;
-    text-align: center;
-    font-size: larger;
-}
-
-#welcome > img {
-    width: 300px;
-    border-radius: 50%;
-    margin: 2%;
-    transition: transform .2s;
-}
-
-#welcome > img:hover {
-    transform: scale(1.05);
-}
 
 #list {
     display: grid;
@@ -78,19 +58,16 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
 }
 
 #welcome > h2 {
     text-align: center;
-    margin: 0;
-    margin-top: 5%;
 }
 
 #welcome {
-    margin-left: 20%;
-    margin-right: 5%;
     font-size: larger;
+    text-align: center;
 }
 
 /* Games section */
