--- a/20NumberGame/main.css
+++ b/20NumberGame/main.css
@@ -1,3 +1,32 @@
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif 
+}
+
 .number:hover {
     cursor: pointer;
+}
+
+
+button {
+  background-color: white;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  user-select: none;
+}
+
+button:hover {
+  background-color: #a79c9c;
+}
+
+button:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
 }
