--- a/main.css
+++ b/main.css
@@ -91,6 +91,7 @@ main {
     border: 4px solid var(--bg2);
     transition: transform .2s;
     border-radius: 20px;
+    height: 430px;
 }
 
 .game-box:hover {
